# pinecone_demo

./: .gitignore  pyproject.toml
input_data/: download_dataset.py
mains/: .env  pinecone_main.py
utils/: pinecone_demo.py
